packages/typ/tests/fixtures/diagnostics/0307_fun_explicit_poly_returns_bool_07.ml.infer.expected
File "0307_fun_explicit_poly_returns_bool_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0307_fun_explicit_poly_returns_bool_07 is not a valid module name.

File "0307_fun_explicit_poly_returns_bool_07.ml", line 1, characters 29-42:
1 | let bad_eta : 'a. 'a -> 'a = fun _ -> true
                                 ^^^^^^^^^^^^^
Error: This definition has type bool -> bool which is less general than
         'a. 'a -> 'a
       The type bool is not a type variable.
